--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="logo-holder">
-        <img src="/images/logo.svg" alt="logo of the landing page" />
+        <img src="images/logo.svg" alt="logo of the landing page" />
       </div>
       <ul>
         <li><a href="#features">Features</a></li>
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="img1">
-          <img src="/images/illustration-1.svg" alt="" />
+          <img src="images/illustration-1.svg" alt="" />
         </div>
       </section>
       <!-- big curve -->
@@ -72,18 +72,18 @@
             <br />
             <a href="#">
               See how Fylo works
-              <img src="/images/icon-arrow.svg" alt="arrow" />
+              <img src="images/icon-arrow.svg" alt="arrow" />
             </a>
           </p>
           <div class="comment-box">
-            <img src="/images/icon-quotes.svg" alt="" />
+            <img src="images/icon-quotes.svg" alt="" />
             <p>
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
               collaboration machine.
             </p>
             <div class="img-holder">
-              <img src="/images/avatar-testimonial.jpg" alt="" />
+              <img src="images/avatar-testimonial.jpg" alt="" />
               <div class="text-holder">
                 <p class="bold"><strong>Kyle Burton</strong></p>
                 <p class="normal">Founder & CEO, Huddle</p>
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="img2">
-          <img src="/images/illustration-2.svg" alt="" />
+          <img src="images/illustration-2.svg" alt="" />
         </div>
       </section>
       <section class="third-section">
@@ -124,14 +124,14 @@
       </section>
       <section class="fourth-section">
         <div class="bottom-img"> 
-          <img src="/images/logo.svg"  class="invert"  alt="">
+          <img src="images/logo.svg"  class="invert"  alt="">
         </div>
        
         <div class="list">
           <div class="first-list">
             <ul>
-              <li><img src="/images/icon-phone.svg" alt="phone"> Phone: +1-543-123-4567</li>
-              <li> <img src="/images/icon-email.svg" alt="email">example@fylo.com</li>
+              <li><img src="images/icon-phone.svg" alt="phone"> Phone: +1-543-123-4567</li>
+              <li> <img src="images/icon-email.svg" alt="email">example@fylo.com</li>
             </ul>
           </div>
           <div class="second-list">
